<resources>
    <string name="app_name">WifiFileTranserfer</string>
    <string name="create_hotspot">Create hotspot</string>
    <string name="connect_to_hotspot">Connect</string>
    <string name="test_1">test_1</string>
    <string name="test_2">test_2</string>
    <string name="test_3">test 3</string>
    <string name="test_4">test 4</string>
    <string name="server_socket">Start Server</string>
    <string name="register_service">REGISTER SERVICE</string>
    <string name="start_discovery">Start Discovery</string>
    <string name="connect_to_server">Connect to Server</string>
    <string name="generate_qr_code">GENERATE QR CODE</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="lead_device">LEAD DEVICE</string>
    <string name="join_lead">JOIN LEAD</string>
    <string name="method_2_nsd">Method 2 : NSD</string>
    <string name="nsd">NSD</string>
    <string name="method_1">Method 1</string>
    <string name="method_2">Method 2</string>
    <string name="connect">Connect</string>
    <string name="test">test</string>
    <string name="unknown">unknown</string>
    <string name="receive">RECEIVE</string>
    <string name="send">SEND</string>
    <string name="receive_forms">RECEIVE FORM</string>
    <string name="send_forms">SEND FORMS</string>
</resources>
