<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.examples.akshay.wififiletranserfer.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_activity_button_create_hotspot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_hotspot" />

    <Button
        android:id="@+id/main_activity_button_connect_to_hotspot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_hotspot" />

    <Button
        android:id="@+id/main_activity_button_test1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_service" />

    <Button
        android:id="@+id/main_activity_button_test2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_discovery" />

    <Button
        android:id="@+id/main_activity_button_test3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_socket" />

    <Button
        android:id="@+id/main_activity_button_test4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_server" />

    <Button
        android:id="@+id/main_activity_button_scan_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code" />

    <Button
        android:id="@+id/main_activity_button_generate_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code" />
</LinearLayout>
